--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,8 @@ body {
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
-  background-image: url(../src/assets/bg2-texture.jpg);
+  background-image: url(../src/assets/Art7.png);
+  background-size: cover;
 }
 
 /* =================== General Styles ================================================================ */
