--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 35% 50%;
     gap: 15%;
+    
 }
 
 .about_me {
@@ -17,11 +18,29 @@
     border-radius: 2rem;
     overflow: hidden;
     transform: rotate(20deg);
-    transition: var(--transition)
+    transition: var(--transition);
+    margin-top: 0.5rem;
 }
 
 .about_me-image:hover {
     transform: rotate(0deg);
+}
+
+.about_me2 {
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 99rem;
+    background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
+    display: grid;
+    place-items: center;
+    
+}
+
+.about_me2-image {
+    border-radius: 2rem;
+    overflow: hidden;
+    transition: var(--transition);
+    border-radius: 40%;
 }
 
 .about_cards {
