--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -42,12 +42,15 @@ header {
 .me {
     background: linear-gradient(var(--color-primary), transparent);
     width: 20rem;
-    height: 26rem;
+    height: 30rem;
     position:absolute;
     left: calc(50% - 11rem);
     margin-top: 4rem;
-    border-radius: 5%;
-    overflow: hidden;
+    border-radius: 99%;
+    
+}
+.me img {
+    border-radius: 99%;
 }
 
 /* ================================ Scroll Down ========================= */
