--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -52,8 +52,8 @@
 }
 
 .about_card {
-    background: var(--color-bg-variant);
-    border: 1px solid transparent;
+    background: var(--color-bg-variant) transparent;
+    border: 1px solid;
     border-radius: 1rem;
     padding: 2rem;
     text-align: center;
@@ -86,6 +86,10 @@
 .about_content p {
     margin: 2rem 0 2.6rem;
     color: var(--color-light);
+}
+
+p {
+    display: inline-block;
 }
 
 /* ======================= MEDIA QUERIES (MEDIUM DEVICES) =============================== */
