--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -5,20 +5,20 @@
 }
 
 .portfolio_item {
-    background: var(--color-bg-variant);
+    background: transparent;
     padding: 1.2rem;
     border-radius: 1rem;
-    border: 1px solid transparent;
+    border: 1px solid ;
     transition: var(--transition);
 }
 
 .portfolio_item:hover {
     border-color: var(--color-primary-variant);
-    background: transparent;
+    
 }
 
 .portfolio_item-image {
-    border-radius: 1rem;
+    background: cover;
     
     
 }
